--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -98,6 +98,7 @@ jobs:
           MERGE_REQUIRED_APPROVALS: 1
           MERGE_LABELS: ""
           MERGE_READY_STATE: "clean,has_hooks,unknown,unstable,blocked"
+          LOG: "DEBUG"
 
       - name: Add comment once merge is success-full
         if: steps.automerge.outputs.mergeResult == 'merged'
