--- a/app/client/package.json
+++ b/app/client/package.json
@@ -186,6 +186,7 @@
     "styled-components": "^5.3.6",
     "tern": "^0.21.0",
     "tinycolor2": "^1.4.2",
+    "to-json-schema": "^0.2.5",
     "toposort": "^2.0.2",
     "tslib": "^2.3.1",
     "typescript": "4.5.5",
@@ -252,6 +253,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/tern": "0.22.0",
     "@types/tinycolor2": "^1.4.2",
+    "@types/to-json-schema": "^0.2.1",
     "@types/toposort": "^2.0.3",
     "@types/webfontloader": "1.6.33",
     "@types/zipcelx": "^1.5.0",
