feat: modified workflows to accept airgap client builds (#1297)
## Description

- Modifies the build workflow to use the `build_airgap` folder for
airgapped builds. Ref :
[#22413](https://github.com/appsmithorg/appsmith/pull/22413)
- Pushes to docker hub with `appsmith/appsmith-ee-airgap:<tagname>
- Modifies server dockerfile to accept burned in build args and copy the
current client build based on it.

> Workflows for airgap build.

Fixes [#22456](https://github.com/appsmithorg/appsmith/issues/22456)


Media
> A video or a GIF is preferred. when using Loom, don’t embed because it
looks like it’s a GIF. instead, just link to the video


## Type of change

> Please delete options that are not relevant.

- New feature (non-breaking change which adds functionality)
- Chore (housekeeping or task changes that don't impact user perception)


## How Has This Been Tested?
- Not yet should test in CI

### Test Plan
> Add Testsmith test cases links that relate to this PR

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)


## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added T

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -9,10 +9,18 @@ on:
         description: "This is the PR number in case the workflow is being called in a pull request"
         required: false
         type: number
+      airgap-enabled:
+        description: "This is a boolean value in case the workflow is building for airgap"
+        required: false
+        type: string
+        default: "false"
 
 jobs:
   build-docker:
     runs-on: ubuntu-latest
+    env:
+      CLIENT_BUILD_NAME: ${{ if(inputs.airgap-enabled == "true", 'client-build-airgap', 'client-build') }}
+      CLIENT_BUILD_PATH: ${{ if(inputs.airgap-enabled == "true", 'app/client/build_airgap', 'app/client/build') }}
     if: |
       github.event.pull_request.head.repo.full_name == github.repository ||
       github.event_name == 'push' ||
@@ -50,8 +58,8 @@ jobs:
         if: steps.run_result.outputs.run_result != 'success'
         uses: actions/download-artifact@v3
         with:
-          name: client-build
-          path: app/client/build
+          name: ${{ env.CLIENT_BUILD_NAME }}
+          path: ${{ env.CLIENT_BUILD_PATH }}
 
       - name: Download the server build artifact
         if: steps.run_result.outputs.run_result != 'success'
@@ -96,4 +104,3 @@ jobs:
 
       - name: Save the status of the run
         run: echo "run_result=success" >> $GITHUB_OUTPUT > ~/run_result
-        
