--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -9,18 +9,10 @@ on:
         description: "This is the PR number in case the workflow is being called in a pull request"
         required: false
         type: number
-      airgap-enabled:
-        description: "This is a boolean value in case the workflow is building for airgap"
-        required: false
-        type: string
-        default: "false"
 
 jobs:
   build-docker:
     runs-on: ubuntu-latest
-    env:
-      CLIENT_BUILD_NAME: ${{ if(inputs.airgap-enabled == "true", 'client-build-airgap', 'client-build') }}
-      CLIENT_BUILD_PATH: ${{ if(inputs.airgap-enabled == "true", 'app/client/build_airgap', 'app/client/build') }}
     if: |
       github.event.pull_request.head.repo.full_name == github.repository ||
       github.event_name == 'push' ||
@@ -58,8 +50,8 @@ jobs:
         if: steps.run_result.outputs.run_result != 'success'
         uses: actions/download-artifact@v3
         with:
-          name: ${{ env.CLIENT_BUILD_NAME }}
-          path: ${{ env.CLIENT_BUILD_PATH }}
+          name: client-build
+          path: app/client/build
 
       - name: Download the server build artifact
         if: steps.run_result.outputs.run_result != 'success'
@@ -104,3 +96,4 @@ jobs:
 
       - name: Save the status of the run
         run: echo "run_result=success" >> $GITHUB_OUTPUT > ~/run_result
+        
