--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -34,9 +34,6 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest-4-cores
-    env:
-      CLIENT_BUILD_NAME: ${{ if(inputs.airgap-enabled == "true", 'client-build-airgap', 'client-build') }}
-      CLIENT_BUILD_PATH: ${{ if(inputs.airgap-enabled == "true", 'app/client/build_airgap/', 'app/client/build/') }}
     # Only run this workflow for internally triggered events
     if: |
       github.event.pull_request.head.repo.full_name == github.repository ||
@@ -169,15 +166,16 @@ jobs:
       - name: Restore the previous bundle
         uses: actions/cache@v3
         with:
-          path: ${{ env.CLIENT_BUILD_PATH }}
+          path: |
+            app/client/build/
           key: ${{ github.run_id }}-${{ github.job }}-client
 
       # Upload the build artifact so that it can be used by the test & deploy job in the workflow
       - name: Upload react build bundle
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.CLIENT_BUILD_NAME }}}
-          path: ${{ env.CLIENT_BUILD_PATH }}
+          name: client-build
+          path: app/client/build/
 
       # Set status = success
       - name: Save the status of the run
