feat: modified workflow for airgap build (#1318)
## Description

- Modifies the build workflow to use the `build_airgap` folder for
airgapped builds. Ref :
[#22413](https://github.com/appsmithorg/appsmith/pull/22413)
- Pushes to docker hub with `appsmith/appsmith-ee-airgap:<tagname>
- Modifies server dockerfile to accept burned in build args and copy the
current client build based on it.

> Workflows for airgap build.

Fixes [#22456](https://github.com/appsmithorg/appsmith/issues/22456)


Media
Ref: https://github.com/berzerkeer/action-test/actions/runs/4762025178
(Test run on a dummy repo)
![Screenshot 2023-04-21 at 11 57 51
AM](https://user-images.githubusercontent.com/74818788/233557869-a4a30add-42c3-400c-a50e-444e2d83e303.png)
![Screenshot 2023-04-21 at 11 57 35
AM](https://user-images.githubusercontent.com/74818788/233557882-bf14e142-6891-445b-a1c5-a53603b9d151.png)


yaml files:
https://github.com/berzerkeer/action-test/tree/main/.github/workflows

## Type of change

> Please delete options that are not relevant.

- New feature (non-breaking change which adds functionality)
- Chore (housekeeping or task changes that don't impact user perception)


## How Has This Been Tested?
- Not yet should test in CI

### Test Plan
> Add Testsmith test cases links that relate to this PR

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)


## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged u

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -9,6 +9,11 @@ on:
         description: "This is the PR number in case the workflow is being called in a pull request"
         required: false
         type: number
+      airgap-enabled:
+        description: "This is a boolean value in case the workflow is building for airgap"
+        required: false
+        type: string
+        default: "false"
 
 jobs:
   build-docker:
@@ -46,12 +51,27 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Set the client build path env vars
+        run: |
+         if [[ '${{ inputs.airgap-enabled }}' == 'true' ]]; then
+          echo 'client_build_name=client-build-airgap' >> "$GITHUB_ENV"
+          echo 'client_build_path=app/client/build_airgap' >> "$GITHUB_ENV"
+         else
+          echo 'client_build_name=client-build' >> "$GITHUB_ENV"
+          echo 'client_build_path=app/client/build' >> "$GITHUB_ENV"
+          fi
+
+      - name: Log the client build env vars
+        run: |
+          echo "client_build_name: ${{ env.client_build_name }}"
+          echo "client_build_path: ${{ env.client_build_path }}"
+
       - name: Download the client build artifact
         if: steps.run_result.outputs.run_result != 'success'
         uses: actions/download-artifact@v3
         with:
-          name: client-build
-          path: app/client/build
+          name: ${{ env.client_build_name }}
+          path: ${{ env.client_build_path }}
 
       - name: Download the server build artifact
         if: steps.run_result.outputs.run_result != 'success'
