--- a/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
+++ b/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
@@ -21,6 +21,7 @@ jobs:
             env: `${{ github.event.client_payload.slash_command.args.named.env }}`.
             PR: ${{ github.event.client_payload.pull_request.number }}.
             recreate: ${{ github.event.client_payload.slash_command.args.named.recreate }}.
+            airgap-enabled: ${{ github.event.client_payload.slash_command.args.named.airgap-enabled }}.
 
   server-build:
     name: server-build
@@ -39,6 +40,7 @@ jobs:
     with:
       pr: ${{ github.event.client_payload.pull_request.number }}
       skip-tests: ${{ github.event.client_payload.slash_command.args.named.skip-tests }}
+      airgap-enabled: ${{ github.event.client_payload.slash_command.args.named.airgap-enabled }}
 
   rts-build:
     name: rts-build
@@ -115,11 +117,26 @@ jobs:
       - id: git_hash
         run: echo "git_hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
+      - name: Set the client build path env vars
+        run: |
+         if [[ '${{ inputs.airgap-enabled }}' == 'true' ]]; then
+          echo 'client_build_name=client-build-airgap' >> "$GITHUB_ENV"
+          echo 'client_build_path=app/client/build_airgap/' >> "$GITHUB_ENV"
+         else
+          echo 'client_build_name=client-build' >> "$GITHUB_ENV"
+          echo 'client_build_path=app/client/build/' >> "$GITHUB_ENV"
+          fi
+
+      - name: Log the client build env vars
+        run: |
+          echo "client_build_name: ${{ env.client_build_name }}"
+          echo "client_build_path: ${{ env.client_build_path }}"
+
       - name: Download the react build artifact
         uses: actions/download-artifact@v3
         with:
-          name: client-build
-          path: app/client/build
+          name: ${{ env.client_build_name }}
+          path: ${{ env.client_build_path }}
 
       - name: Download the server build artifact
         uses: actions/download-artifact@v3
