fix: typo extra curly brace (#1319)
## Description

- Had an extra } for the client build name.

--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -188,7 +188,7 @@ jobs:
       - name: Upload react build bundle
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.client_build_name }}}
+          name: ${{ env.client_build_name }}
           path: ${{ env.client_build_path }}
 
       # Set status = success
