updated the feature flag logic

--- a/app/server/appsmith-server/src/main/resources/features/init-flags.yml
+++ b/app/server/appsmith-server/src/main/resources/features/init-flags.yml
@@ -68,8 +68,8 @@ ff4j:
       flipstrategy:
         class: com.appsmith.server.featureflags.strategies.EmailBasedRolloutStrategy
         param:
-          - name: emailDomains
-            value: appsmith.com,moolya.com
+          - name: emails
+            value: me-eng1@appsmith.com, me-eng2@appsmith.com, me-qa1@appsmith.com, me-qa2@appsmith.com, me-demo@appsmith.com
 
     - uid: MULTIPLE_PANES
       enable: true
