--- a/.github/workflows/test-build-docker-image-master.yml
+++ b/.github/workflows/test-build-docker-image-master.yml
@@ -1,12 +1,12 @@
-name: Test, build and push Docker Image
+name: Test, build and push Docker Image for master branch
 
 on:
   # This line enables manual triggering of this workflow.
   workflow_dispatch:
 
-  # trigger for pushes to release and master
+  # trigger for pushes to master
   push:
-    branches: [release, master]
+    branches: [master]
     paths:
       - "app/client/**"
       - "app/server/**"
@@ -68,12 +68,7 @@ jobs:
 
   ci-test-result:
     needs: [ci-test]
-    if: always() &&
-      (github.event_name == 'workflow_dispatch' ||
-      github.event_name == 'push' ||
-      (github.event_name == 'pull_request_review' &&
-      github.event.review.state == 'approved' &&
-      github.event.pull_request.head.repo.full_name == github.repository))
+    if: always()
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -145,30 +140,11 @@ jobs:
       id-token: write
 
     # Run this job irrespective of tests failing, if this is the release branch; or only if the tests pass, if this is the master branch.
-    if: (success() && github.ref == 'refs/heads/master') ||
-      ( always() &&
-      (
-      github.event_name == 'workflow_dispatch' ||
-      github.event_name == 'push' ||
-      (
-      github.event_name == 'pull_request_review' &&
-      github.event.review.state == 'approved' &&
-      github.event.pull_request.head.repo.full_name == github.repository
-      )
-      ) &&
-      github.ref == 'refs/heads/release'
-      )
+    if: success()
 
     steps:
       # Checkout the code
-      - name: Checkout the merged commit from PR and base branch
-        if: github.event_name == 'pull_request_review'
-        uses: actions/checkout@v3
-        with:
-          ref: refs/pull/${{ github.event.pull_request.number }}/merge
-
       - name: Checkout the head commit of the branch
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
 
       - name: Download the react build artifact
@@ -195,12 +171,6 @@ jobs:
           echo "Cleaning up the tar files"
           rm app/rts/dist/rts-dist.tar
 
-      # Here, the GITHUB_REF is of type /refs/head/<branch_name>. We extract branch_name from this by removing the
-      # first 11 characters. This can be used to build images for several branches
-      - name: Get the version to tag the Docker image
-        id: vars
-        run: echo tag=$(echo ${GITHUB_REF:11}) >> $GITHUB_OUTPUT
-
       - name: Set up Depot CLI
         uses: depot/setup-action@v1
 
@@ -209,16 +179,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      # Build release Docker image and push to Docker Hub
-      - name: Push client release image to Docker Hub
-        if: success() && github.ref == 'refs/heads/release' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
-        uses: depot/build-push-action@v1
-        with:
-          context: app/client
-          push: true
-          tags: |
-            ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:${{steps.vars.outputs.tag}}
 
       # Build master Docker image and push to Docker Hub
       - name: Push client master image to Docker Hub with commit tag
@@ -230,18 +190,6 @@ jobs:
           tags: |
             ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:${{ github.sha }}
             ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:nightly
-
-      - name: Build and push release image to Docker Hub
-        if: success() && github.ref == 'refs/heads/release' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
-        uses: depot/build-push-action@v1
-        with:
-          context: .
-          push: true
-          platforms: linux/arm64,linux/amd64
-          build-args: |
-            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY_RELEASE }}
-          tags: |
-            ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:${{steps.vars.outputs.tag}}
 
       - name: Build and push master image to Docker Hub with commit tag
         if: success() && github.ref == 'refs/heads/master' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
@@ -255,40 +203,6 @@ jobs:
           tags: |
             ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:${{ github.sha }}
             ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:nightly
-
-      # - name: Check and push CI image to Docker Hub with commit tag
-      #   if: success() && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/release') && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
-      #   working-directory: "."
-      #   run: |
-      #     if [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-      #       tag=nightly
-      #     else
-      #       tag="${{ steps.vars.outputs.tag }}"
-      #     fi
-      #     docker run --detach --publish 80:80 --name appsmith \
-      #       "${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:$tag"
-      #     sleep 180
-      #     cd deploy/docker
-      #     if bash run-test.sh; then
-      #       echo "Fat container test passed. Pushing image."
-      #       docker push --all-tags ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce
-      #     else
-      #       echo "Fat container test FAILED. Not pushing image."
-      #       # Temporarily pushing even if test fails.
-      #       docker push --all-tags ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-ce
-      #     fi
-
-      # Build release Docker image and push to Docker Hub
-      - name: Push server release image to Docker Hub
-        if: success() && github.ref == 'refs/heads/release'
-        uses: depot/build-push-action@v1
-        with:
-          context: app/server
-          push: true
-          build-args: |
-            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY_RELEASE }}
-          tags: |
-            ${{ vars.DOCKER_HUB_ORGANIZATION }}/appsmith-server:${{steps.vars.outputs.tag}}
 
       # Build master Docker image and push to Docker Hub
       - name: Push server master image to Docker Hub with commit tag
