--- a/.github/workflows/ci-merge-check.yml
+++ b/.github/workflows/ci-merge-check.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Get ci-test-result status from the run_id
         id: ci_test_result_status
         run: |
-          run_status=`curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/appsmithorg/appsmith/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
+          run_status=`curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{github.repository}}/actions/runs/${{steps.workflow.outputs.run_id}}/jobs?per_page=100`
           echo "ci_test_result=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test-result")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT                                    
           echo "ci_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("ci-test ")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
           echo "perf_test_status=`echo $run_status | jq -r '[ .jobs[] | select (select(.name | contains("perf-test")) | .conclusion | contains("failure"))] | length'`" >> $GITHUB_OUTPUT
@@ -41,17 +41,24 @@ jobs:
       - name: get status-checks from pr
         id: pr_status_check
         run: |
-          status_link="https://api.github.com/repos/appsmithorg/appsmith/statuses/${{github.event.client_payload.pull_request.head.sha}}"
+          status_link="https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.client_payload.pull_request.head.sha}}"
           echo "merge_freeze_status=`curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" $status_link | jq -r '[.[] | select( select( .context | contains("mergefreeze")) | .state | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
 
       - name: get status-checks from check suite
         id: suite_status_check
         run: |
-          check_runs_link="https://api.github.com/repos/appsmithorg/appsmith/commits/${{github.event.client_payload.pull_request.head.sha}}/check-runs"
+          check_runs_link="https://api.github.com/repos/${{github.repository}}/commits/${{github.event.client_payload.pull_request.head.sha}}/check-runs"
           check_run_result=`curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" $check_runs_link`
           echo "test_plan_approval_status=`echo $check_run_result | jq -r '[[.check_runs[]|select(.name | contains("Test Plan Approved"))][0] | select( .conclusion | contains("success") | not)] | length'`" >> $GITHUB_OUTPUT
           echo "ci_test_available=`echo $check_run_result | jq -r '[.check_runs[] | select(.name | contains("ci-test-result"))] | length'`" >> $GITHUB_OUTPUT
 
+      - name: get pr approval status
+        id: pr_approval_status
+        run: |
+          pr_reviews_link="https://api.github.com/repos/${{github.repository}}/pulls/${{github.event.client_payload.pull_request.number}}/reviews"
+          pr_reviews=`curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" $pr_reviews_link`
+          echo "approved_pr_reviews=`echo $pr_reviews | jq -r 'if length > 0 then [.[]|select(.state | contains ("APPROVED"))]|length else 0 end'`" >> $GITHUB_OUTPUT
+      
       - name: Verify all the checks
         id: verify_checks
         run: |
@@ -72,6 +79,9 @@ jobs:
           elif [ ${{ steps.suite_status_check.outputs.test_plan_approval_status }} == 1 ]; then
             echo "msg=Either get 'Test Plan Approved' or 'skip-testPlan' added and try again!" >> $GITHUB_OUTPUT
             exit 1
+          elif [ ${{ steps.pr_approval_status.outputs.approved_pr_reviews }} == 0 ]; then
+            echo "msg=Minimum 1 approval needed to merge this PR, please get it reviewed by your peer and try again!" >> $GITHUB_OUTPUT
+            exit 1
           elif [ ${{ steps.suite_status_check.outputs.test_plan_approval_status }} == 0 ]; then
             echo "msg=Hurray!🎉 Proceeding to Merge!!!" >> $GITHUB_OUTPUT
             exit 0
@@ -91,33 +101,32 @@ jobs:
       - name: Auto merge if above checks are success and have 1 approval
         if: success()
         id: automerge
-        uses: "pascalgn/automerge-action@v0.15.5"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PULL_REQUEST: ${{ github.event.client_payload.pull_request.number }}
-          MERGE_REQUIRED_APPROVALS: 1
-          MERGE_LABELS: ""
-          UPDATE_LABELS: ""
-          MERGE_READY_STATE: "clean,has_hooks,unknown,unstable,blocked"
-          LOG: "TRACE"
-
-      - name: Add comment once merge is success-full
-        if: steps.automerge.outputs.mergeResult == 'merged'
-        uses: peter-evans/create-or-update-comment@v2
+        uses: juliangruber/merge-pull-request-action@v1
         with:
-          issue-number: ${{ github.event.client_payload.pull_request.number }}
-          body: |
-            Pull request ${{ steps.automerge.outputs.pullRequestNumber }} Auto-merged!
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ github.event.client_payload.pull_request.number }}
+          method: merge
+          repo: ${{ github.repository }}
 
-      - name: Comment if it is not merged
-        if: steps.automerge.outputs.mergeResult != 'merged'
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          issue-number: ${{ github.event.client_payload.pull_request.number }}
-          body: |
-            Auto merge has been failed. Probably for the following reasons:
-            1. The minimum approval requirement has not been met.
-            2. There might be some merge conflicts.
-            3. There are some failed checks.
+      - run : |
+          echo ${{ steps.automerge.outputs }}
 
-            Please ask someone with merge access to review and merge.
+      # - name: Add comment once merge is success-full
+      #   if: steps.automerge.outputs.mergeResult == 'merged'
+      #   uses: peter-evans/create-or-update-comment@v2
+      #   with:
+      #     issue-number: ${{ github.event.client_payload.pull_request.number }}
+      #     body: |
+      #       Pull request ${{ steps.automerge.outputs.pullRequestNumber }} Auto-merged!
+
+      # - name: Comment if it is not merged
+      #   if: steps.automerge.outputs.mergeResult != 'merged'
+      #   uses: peter-evans/create-or-update-comment@v2
+      #   with:
+      #     issue-number: ${{ github.event.client_payload.pull_request.number }}
+      #     body: |
+      #       Auto merge has been failed. Probably for the following reasons:
+      #       2. There might be some merge conflicts.
+      #       3. There are some failed checks.
+
+      #       Please ask someone with merge access to review and merge.
