--- a/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
+++ b/.github/workflows/on-demand-build-docker-image-deploy-preview.yml
@@ -80,12 +80,12 @@ jobs:
         if: steps.run_result.outputs.run_result != 'success'
         id: vars
         run: |
-          echo "REACT_APP_ENVIRONMENT=DEVELOPMENT" >> $GITHUB_OUTPUT
           if [[ "${{github.ref}}" == "refs/heads/master" ]]; then
               echo "REACT_APP_ENVIRONMENT=PRODUCTION" >> $GITHUB_OUTPUT
-          fi
-          if [[ "${{github.ref}}" == "refs/heads/release" ]]; then
+          elif [[ "${{github.ref}}" == "refs/heads/release" ]]; then
               echo "REACT_APP_ENVIRONMENT=STAGING" >> $GITHUB_OUTPUT
+          else
+              echo "REACT_APP_ENVIRONMENT=DEVELOPMENT" >> $GITHUB_OUTPUT
           fi
 
       # Run the Jest tests only if the workflow has been invoked in a PR
