--- a/app/client/packages/design-system/headless/package.json
+++ b/app/client/packages/design-system/headless/package.json
@@ -19,8 +19,7 @@
     "@react-stately/toggle": "^3.5.1",
     "@react-types/button": "^3.7.1",
     "@react-types/checkbox": "^3.4.3",
-    "@react-types/shared": "^3.17.0",
-    "classnames": "*"
+    "@react-types/shared": "^3.17.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0-rc.1 || ^18.0.0"
