--- a/app/client/packages/design-system/widgets/package.json
+++ b/app/client/packages/design-system/widgets/package.json
@@ -14,14 +14,10 @@
     "@design-system/headless": "*",
     "@design-system/theming": "*",
     "@react-aria/utils": "^3.16.0",
-    "colorjs.io": "^0.4.3",
-    "eslint-plugin-storybook": "^0.6.10",
-    "react": "*",
-    "react-dom": "*"
+    "colorjs.io": "^0.4.3"
   },
   "devDependencies": {
-    "@types/react": "*",
-    "@types/react-dom": "*"
+    "eslint-plugin-storybook": "^0.6.10"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0-rc.1 || ^18.0.0"
