--- a/app/client/packages/storybook/package.json
+++ b/app/client/packages/storybook/package.json
@@ -38,8 +38,6 @@
     "@capsizecss/core": "^3.1.0",
     "@capsizecss/metrics": "^1.0.1",
     "colorjs.io": "^0.4.3",
-    "react": "^17.0.2",
-    "react-docgen-typescript": "^2.2.2",
-    "react-dom": "^17.0.2"
+    "react-docgen-typescript": "^2.2.2"
   }
 }
