--- a/.github/workflows/perf-test.yml
+++ b/.github/workflows/perf-test.yml
@@ -189,22 +189,22 @@ jobs:
           repository: appsmithorg/performance-infra
           token: ${{ secrets.APPSMITH_PERF_INFRA_REPO_PAT }}
           ref: ${{ steps.perf_infra_ref.outputs.ref }}
-          path: app/client/perf
+          path: perf
 
       - name: Installing performance tests dependencies
         if: steps.run_result.outputs.run_result != 'success'
-        working-directory: app/client/perf
+        working-directory: perf
         shell: bash
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Change test script permissions
         if: steps.run_result.outputs.run_result != 'success'
-        working-directory: app/client/perf
+        working-directory: perf
         run: chmod +x ./start-test.sh
 
       - name: Run performance tests
         if: steps.run_result.outputs.run_result != 'success'
-        working-directory: app/client/perf
+        working-directory: perf
         shell: bash
         env:
           APPSMITH_SSL_CERTIFICATE: ${{ secrets.APPSMITH_SSL_CERTIFICATE }}
@@ -229,7 +229,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            app/client/perf/traces
+            perf/traces
           key: ${{ github.run_id }}-${{ github.job }}-${{ steps.timestamp.outputs.timestamp }}
           restore-keys: |
             ${{ github.run_id }}-${{ github.job }}
@@ -237,7 +237,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: performance-test-logs
-          path: app/client/perf/traces/reports
+          path: perf/traces/reports
 
       # Set status = success
       - name: Save the status of the run
