Update cypress package

--- a/app/client/cypress/package.json
+++ b/app/client/cypress/package.json
@@ -30,6 +30,7 @@
       "cypress-file-upload": "^4.1.1",
       "cypress-image-snapshot": "^4.0.1",
       "cypress-multi-reporters": "^1.2.4",
+      "cypress-plugin-tab": "^1.0.5",
       "cypress-real-events": "^1.7.1",
       "cypress-wait-until": "^1.7.2",
       "cypress-xpath": "^1.4.0",
