--- a/app/client/packages/design-system/headless/package.json
+++ b/app/client/packages/design-system/headless/package.json
@@ -16,9 +16,12 @@
     "@react-aria/utils": "^3.16.0",
     "@react-aria/visually-hidden": "^3.8.0",
     "@react-spectrum/utils": "^3.9.0",
+    "@react-stately/checkbox": "^3.4.1",
     "@react-stately/toggle": "^3.5.1",
     "@react-types/button": "^3.7.1",
     "@react-types/checkbox": "^3.4.3",
+    "@react-types/label": "^3.7.3",
+    "classnames": "*",
     "@react-types/shared": "^3.17.0"
   },
   "peerDependencies": {
