chore: Changes based on GPT integration feedback (#1382)
## Description
Include following changes
- Opens messages window by default instead of example prompts.
- Trims widget context to contain only types.
- Added smooth scroll.
- Track GPT response times for analytics.

## Type of change
- Chore (housekeeping or task changes that don't impact user perception)

## How Has This Been Tested?
- Manual

### Issues raised during DP testing
> Link issues raised during DP testing for better visiblity and tracking
(copy link from comments dropped on this PR)

## Checklist:
### Dev activity
- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [x] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes
- [ ] PR is being merged under a feature flag


### QA activity:
- [ ] Test plan has been approved by relevant developers
- [ ] Test plan has been peer reviewed by QA
- [ ] Cypress test cases have been added and approved by either SDET or
manual QA
- [ ] Organized project review call with relevant stakeholders after
Round 1/2 of QA
- [ ] Added Test Plan Approved label after reveiwing all Cypress test

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -90,6 +90,7 @@
     "fuse.js": "^3.4.5",
     "fusioncharts": "^3.18.0",
     "fusionmaps": "^3.18.0",
+    "fuzzyset": "^1.0.7",
     "graphql": "^16.3.0",
     "history": "^4.10.1",
     "http-proxy": "^1.18.1",
@@ -218,6 +219,7 @@
     "@types/deep-diff": "^1.0.0",
     "@types/dom-mediacapture-record": "^1.0.11",
     "@types/downloadjs": "^1.4.2",
+    "@types/fuzzyset": "^1.0.4",
     "@types/jest": "^27.4.1",
     "@types/js-beautify": "^1.13.2",
     "@types/jshint": "^2.12.0",
