Downgrade and lock @blueprintjs/icons
The package got upgraded during https://github.com/appsmithorg/appsmith/pull/20964. The reason we’re downgrading is we want to keep the list of icons we support fixed. If we ever have to migrate off @blueprintjs/icons, we’ll have to manually maintain all icons that are available in the package.

--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,8 @@
     "webpack": "5.76.0",
     "@blueprintjs/core@^3.43.0": "patch:@blueprintjs/core@npm%3A3.47.0#./.yarn/patches/@blueprintjs-core-npm-3.47.0-a5bc1ea927.patch",
     "@blueprintjs/core@^3.33.0": "patch:@blueprintjs/core@npm%3A3.47.0#./.yarn/patches/@blueprintjs-core-npm-3.47.0-a5bc1ea927.patch",
-    "@blueprintjs/core@^3.47.0": "patch:@blueprintjs/core@npm%3A3.47.0#./.yarn/patches/@blueprintjs-core-npm-3.47.0-a5bc1ea927.patch"
+    "@blueprintjs/core@^3.47.0": "patch:@blueprintjs/core@npm%3A3.47.0#./.yarn/patches/@blueprintjs-core-npm-3.47.0-a5bc1ea927.patch",
+    "@blueprintjs/icons": "3.22.0"
   },
   "packageManager": "yarn@3.4.1"
 }
