--- a/app/client/package.json
+++ b/app/client/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.43.0",
     "@blueprintjs/datetime": "^3.23.6",
-    "@blueprintjs/icons": "^3.10.0",
+    "@blueprintjs/icons": "3.22.0",
     "@blueprintjs/popover2": "^0.5.0",
     "@blueprintjs/select": "^3.10.0",
     "@design-system/widgets": "workspace:*",
