chore: ci install ee-helm-charts without efs dep (#1075)
fixes: [1079](https://github.com/appsmithorg/appsmith-ee/issues/1079)

## This will be version3 of appsmith-ee helm charts

This change helps in installing basic 
**kubernetes statefulset of appsmith with EBS if auto-scaling is
disabled**
and
**kubernetes-deployment with 2 pods with EFS only if auto-scaling is
enabled**

By default, auto-scaling is
[disabled](https://github.com/appsmithorg/appsmith-ee/pull/1075/files#diff-5c751dcc8462e7d812cc776668da9d8bcc501dc3ff0364796105053389ae013cR212).
which helps in ease of installation of appsmith-ee .

# Appsmith as statefulset when autoscaling is disabled

### git diff of values.yaml

```
--- a/deploy/helm/values.yaml
+++ b/deploy/helm/values.yaml
@@ -13,7 +13,7 @@ mongodb:
   auth:
     rootUser: root
     rootPassword: password
-  replicaCount: 2
+  replicaCount: 1
   architecture: "replicaset"
   replicaSetName: rs0

@@ -70,7 +70,7 @@ initContainer: {}
 ##
 image:
   registry: index.docker.io
-  repository: appsmith/appsmith-ce
+  repository: appsmith/appsmith-ee
   pullPolicy: IfNotPresent
   pullSecrets: ""
   # Overrides the image tag whose default is the chart appVersion.
@@ -205,11 +205,11 @@ resources:
   #   memory: 128Mi
   limits: {}
   requests:
-     cpu: 2000m
-     memory: 3000Mi
+     cpu: 100m
+     memory: 128Mi

 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 2
   maxReplicas: 2
   targetCPUUtilizationPercentage: 5
@@ -340,7 +340,7 @@ applicationConfig:
   APPSMITH_ENCRYPTION_SALT: ""
   APPSMITH_CUSTOM_DOMAIN: ""
   APPSMITH_DISABLE_IFRAME_WIDGET_SANDBOX: "false"
-  APPSMITH_LICENSE_KEY: ""
+  APPSMITH_LICENSE_KEY: "9517CE-3E6768-0250C4-423FB2-CF49ED-V3"
   APPSMITH_KEYCLOAK_DB_DRIVER: ""
   APPSMITH_KEYCLOAK_DB_USERNAME: ""
   APPSMITH_KEYCLOAK_DB_PASSWORD: ""
```
### Helm install
```
(base) ➜  helm git:(release) ✗ helm install appsmith . -n goutham --create-name

--- a/deploy/helm/templates/deployment.yaml
+++ b/deploy/helm/templates/deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: {{ if not .Values.autoscaling.enabled }}StatefulSet{{- else }}Deployment{{- end }}
 metadata:
   name: {{ include "appsmith.fullname" . }}
   namespace: {{ include "appsmith.namespace" . }}
@@ -8,8 +8,11 @@ metadata:
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: 1
-  {{- end }}
+  serviceName: {{ include "appsmith.fullname" . }}
+  updateStrategy:
+  {{- else }}
   strategy:
+  {{- end }}
     type: {{ .Values.strategyType }}
   selector:
     matchLabels:
@@ -121,6 +124,25 @@ spec:
   {{- if not .Values.persistence.enabled }}
       - name: data
         emptyDir: {}
+  {{- else if and (not .Values.autoscaling.enabled) (.Values.persistence.enabled) }}
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+        {{- if .Values.persistence.annotations}}
+        annotations:
+          {{- include "tplvalues.render" (dict "value" .Values.persistence.annotations "context" $) | nindent 10 }}
+        {{- end }}
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: {{ .Values.persistence.size | quote }}
+        {{- if .Values.persistence.volumeClaimTemplates.selector }}
+        selector:
+          {{- include "tplvalues.render" (dict "value" .Values.persistence.volumeClaimTemplates.selector "context" $) | nindent 10 }}
+        {{- end }}
+        {{ include "storage.class" (dict "persistence" .Values.persistence "global" .Values.global) | nindent 8 }}
   {{- else }}
       - name: data
         persistentVolumeClaim:
