fix: keycloak url in deploying appsmith-ee (#1374)
Depends on: [1075](https://github.com/appsmithorg/appsmith-ee/pull/1075)
Fixes: [1361](https://github.com/appsmithorg/appsmith-ee/issues/1361)

--- a/deploy/helm/templates/configMap.yaml
+++ b/deploy/helm/templates/configMap.yaml
@@ -21,7 +21,7 @@ data:
   {{- end }}
 
   {{- if and (eq "APPSMITH_KEYCLOAK_DB_URL" $key) ( not $value) }}
-  {{ $key }}: {{ $.Values.postgresql.enabled | ternary (printf "%s-postgresql.%s.svc.cluster.local:5432" $name $nameSpace) "${jboss.server.data.dir}" | quote }}
+  {{ $key }}: {{ $.Values.postgresql.enabled | ternary (printf "%s-postgresql.%s.svc.cluster.local:5432/%s" $name $nameSpace $postgresqlDatabase) "${jboss.server.data.dir}" | quote }}
   {{- end }}
 
   {{- if and (eq "APPSMITH_KEYCLOAK_DB_USERNAME" $key) ( not $value) }}
