--- a/app/client/package.json
+++ b/app/client/package.json
@@ -28,9 +28,9 @@
     "generate:widget": "plop --plopfile generators/index.js",
     "postinstall": "patch-package && CURRENT_SCOPE=client node ../shared/install-dependencies.js",
     "preinstall": "CURRENT_SCOPE=client node ../shared/build-shared-dep.js",
-    "install": "node cypress/apply-patches.js",
+    "install": "node ./node_modules/cypress/apply-patches.js",
     "storybook": "yarn workspace @design-system/storybook storybook",
-    "lint:ci": "eslint --cache --ext .js,.ts,.tsx ./src && eslint --cache --ext .js,.ts ./cypress && yarn run lint:packages",
+    "lint:ci": "eslint --cache --ext .js,.ts ./src && eslint --cache --ext .js,.ts ./cypress && yarn run lint:packages",
     "lint:packages": "workspaces-foreach -pt yarn lint:ci",
     "prettier:ci": "prettier --check ./src && prettier --check ./cypress && yarn run prettier:packages",
     "prettier:packages": "workspaces-foreach -pt yarn prettier:ci",
