--- a/app/client/package.json
+++ b/app/client/package.json
@@ -28,6 +28,7 @@
     "generate:widget": "plop --plopfile generators/index.js",
     "postinstall": "patch-package && CURRENT_SCOPE=client node ../shared/install-dependencies.js",
     "preinstall": "CURRENT_SCOPE=client node ../shared/build-shared-dep.js",
+    "install": "node cypress/apply-patches.js",
     "storybook": "yarn workspace @design-system/storybook storybook",
     "lint:ci": "eslint --cache --ext .js,.ts ./src && eslint --cache --ext .js,.ts ./cypress && yarn run lint:packages",
     "lint:packages": "workspaces-foreach -pt yarn lint:ci",
@@ -263,7 +264,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "cra-bundle-analyzer": "^0.1.0",
     "cy-verify-downloads": "^0.0.5",
-    "cypress": "12.10.0",
+    "cypress": "^12.10.0",
     "cypress-file-upload": "^4.1.1",
     "cypress-image-snapshot": "^4.0.1",
     "cypress-multi-reporters": "^1.2.4",
