--- a/app/client/package.json
+++ b/app/client/package.json
@@ -310,7 +310,8 @@
     "ts-loader": "^9.4.1",
     "webpack-merge": "^5.8.0",
     "workbox-webpack-plugin": "^6.5.3",
-    "yarn-workspaces-foreach": "^0.2.0"
+    "yarn-workspaces-foreach": "^0.2.0",
+    "eslint-plugin-appsmith": "file:src/eslint"
   },
   "resolutions": {
     "browserslist": "4.20.3",
