--- a/.github/workflows/ci-debugging.yml
+++ b/.github/workflows/ci-debugging.yml
@@ -3,11 +3,11 @@ name: CI Debugging
 on:
   # This line enables manual triggering of this workflow.
   workflow_dispatch:
-    inputs:
-      run_id:
-        description: 'Run id to download artifacts:'
-        required: true
-        type: number      
+#     inputs:
+#       run_id:
+#         description: 'Run id to download artifacts:'
+#         required: true
+#         type: number      
 
 jobs:
   ci-debugger:
@@ -44,50 +44,50 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Download Docker image artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          name: cicontainer
-          run_id: ${{ github.event.inputs.run_id }}
+#       - name: Download Docker image artifact
+#         uses: dawidd6/action-download-artifact@v2
+#         with:
+#           name: cicontainer
+#           run_id: ${{ github.event.inputs.run_id }}
 
-      - name: Load Docker image from tar file
-        run: |
-          gunzip cicontainer.tar.gz
-          docker load -i cicontainer.tar
+#       - name: Load Docker image from tar file
+#         run: |
+#           gunzip cicontainer.tar.gz
+#           docker load -i cicontainer.tar
 
-      - name: Create folder
-        if: steps.run_result.outputs.run_result != 'success'
-        env:
-          APPSMITH_LICENSE_KEY: ${{ secrets.APPSMITH_LICENSE_KEY }}
-        working-directory: "."
-        run: |
-          mkdir -p cicontainerlocal/stacks/configuration/
+#       - name: Create folder
+#         if: steps.run_result.outputs.run_result != 'success'
+#         env:
+#           APPSMITH_LICENSE_KEY: ${{ secrets.APPSMITH_LICENSE_KEY }}
+#         working-directory: "."
+#         run: |
+#           mkdir -p cicontainerlocal/stacks/configuration/
 
-      - name: Run docker image
-        if: steps.run_result.outputs.run_result != 'success'
-        env:
-          APPSMITH_LICENSE_KEY: ${{ secrets.APPSMITH_LICENSE_KEY }}
-        working-directory: "."
-        run: |
-          sudo /etc/init.d/ssh stop ;
-          mkdir -p ~/git-server/keys
-          mkdir -p ~/git-server/repos
-          docker run --name test-event-driver -d -p 22:22 -p 5001:5001 -p 3306:3306 \
-          -p 5432:5432 -p 28017:27017 -p 25:25 -p 5000:5000 -p 3001:3000 --privileged --pid=host --ipc=host --volume /:/host -v ~/git-server/keys:/git-server/keys \
-          -v ~/git-server/repos:/git-server/repos  appsmith/test-event-driver:latest
-          cd cicontainerlocal
-          docker run -d --name appsmith -p 80:80 -p 9001:9001 \
-            -v "$PWD/stacks:/appsmith-stacks" -e APPSMITH_LICENSE_KEY=$APPSMITH_LICENSE_KEY \
-            -e APPSMITH_DISABLE_TELEMETRY=true \
-            -e APPSMITH_CLOUD_SERVICES_BASE_URL=http://host.docker.internal:5001 \
-            --add-host=host.docker.internal:host-gateway \
-            cicontainer
+#       - name: Run docker image
+#         if: steps.run_result.outputs.run_result != 'success'
+#         env:
+#           APPSMITH_LICENSE_KEY: ${{ secrets.APPSMITH_LICENSE_KEY }}
+#         working-directory: "."
+#         run: |
+#           sudo /etc/init.d/ssh stop ;
+#           mkdir -p ~/git-server/keys
+#           mkdir -p ~/git-server/repos
+#           docker run --name test-event-driver -d -p 22:22 -p 5001:5001 -p 3306:3306 \
+#           -p 5432:5432 -p 28017:27017 -p 25:25 -p 5000:5000 -p 3001:3000 --privileged --pid=host --ipc=host --volume /:/host -v ~/git-server/keys:/git-server/keys \
+#           -v ~/git-server/repos:/git-server/repos  appsmith/test-event-driver:latest
+#           cd cicontainerlocal
+#           docker run -d --name appsmith -p 80:80 -p 9001:9001 \
+#             -v "$PWD/stacks:/appsmith-stacks" -e APPSMITH_LICENSE_KEY=$APPSMITH_LICENSE_KEY \
+#             -e APPSMITH_DISABLE_TELEMETRY=true \
+#             -e APPSMITH_CLOUD_SERVICES_BASE_URL=http://host.docker.internal:5001 \
+#             --add-host=host.docker.internal:host-gateway \
+#             cicontainer
             
-      - name: Execute access to ci-debug.sh
-        if: steps.run_result.outputs.run_result != 'success'
-        working-directory: "."
-        run: |
-          chmod +x ci-debug.sh
+#       - name: Execute access to ci-debug.sh
+#         if: steps.run_result.outputs.run_result != 'success'
+#         working-directory: "."
+#         run: |
+#           chmod +x ci-debug.sh
 
       # Start tmate session for tunnelling
       - name: Setup tmate session
