--- a/.github/workflows/ci-debugging.yml
+++ b/.github/workflows/ci-debugging.yml
@@ -3,11 +3,11 @@ name: CI Debugging
 on:
   # This line enables manual triggering of this workflow.
   workflow_dispatch:
-#     inputs:
-#       run_id:
-#         description: 'Run id to download artifacts:'
-#         required: true
-#         type: number      
+     inputs:
+       run_id:
+         description: 'Run id to download artifacts:'
+         required: true
+         type: number      
 
 jobs:
   ci-debugger:
